# projeto_precificacao

./: README.md  pyproject.toml
