[tool.poetry]
name = "projeto-precificacao"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "projeto_precificacao"}]

[tool.poetry.dependencies]
python = "3.11.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
